test/sematest/valid/class_type_usage.java
class SomeType {}

class Test {
  public static void main(String[] args) {}

  public SomeType someType;
  public SomeType[] someTypeArray;

  public void test () {
    SomeType someType;
    SomeType[] someTypeArray;
  }
}
