test/sematest/invalid/overloaded_main_with_method.java
class Test {
  public static void main(String[] args) {}
  public void main() {}
}
